--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,13 @@
 # Site settings
 
 title: "Basic git Lesson"
-email: "icarroll@sesync.org"
+email: "cyberhelp@sesync.org"
 description: "Learn tools for collaborative and reproducible research."
 baseurl: "/basic-git-lesson"
 
 # Jekyll Settings
 
 markdown: kramdown
-kramdown:
-  toc_levels: 1..2
 collections:
   - slides
 
