--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ title: "Reproducible Workflows in RStudio"
 email: "cyberhelp@sesync.org"
 description: "Learn tools for collaborative and reproducible research."
 baseurl: /basic-git-lesson
-styleurl: https://rawgit.com/sesync-ci/lesson-stylesheets/master
+# styleurl: https://rawgit.com/sesync-ci/lesson-stylesheets/master
+styleurl: https://cdn.rawgit.com/SESYNC-ci/lesson-stylesheets
+reveal: https://cdn.rawgit.com/hakimel/reveal.js/3.3.0
 
 # Slide Settings
 slide_sorter:
