--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ title: "Collaborative & Reproducible Workflows"
 email: "cyberhelp@sesync.org"
 description: "Learn tools for collaborative and reproducible research."
 baseurl: /basic-git-lesson
-#styleurl: https://cdn.rawgit.com/sesync-ci/lesson-stylesheets/1.0.0
-styleurl: https://rawgit.com/sesync-ci/lesson-stylesheets/master
+styleurl: https://cdn.rawgit.com/sesync-ci/lesson-stylesheets/1.0.1
+#styleurl: https://rawgit.com/sesync-ci/lesson-stylesheets/master
 reveal: https://cdn.rawgit.com/hakimel/reveal.js/3.3.0
 authors:
   - Ian Carroll
