--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,9 +1,25 @@
 # Site
 
+title: Collaborative & Reproducible Workflows
+worksheet: worksheet.R
+tag: v0.0
+lesson: 4
+instructor: Ian Carroll
+authors:
+ - Ian Carroll
+
 # Slides
 
 slide_sorter:
-
+  - workflows
+  - intro
+  - goals
+  - reproducible
+  - github
+  - readme
+  - save
+  - conclude
+  
 #####################################
 # Only modify content above or risk #
 # merge conflicts with upstream.    #
