update slide divisions

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 # Site
 
 title: Collaborative & Reproducible Workflows
-worksheet: worksheet.R
+handouts: worksheet.R
 tag: v0.0
 lesson: 4
 instructor: Ian Carroll
