--- a/docs/_data/lesson.yml
+++ b/docs/_data/lesson.yml
@@ -1,7 +1,7 @@
-title: Collaborative Workflows & Reproducible Pipelines
+title: Collaborative & Reproducible Research
 handouts:
   - worksheet.sh
-tag: v0.2
+tag: v0.3
 lesson: 3
 instructor: Ian Carroll
 example:
@@ -12,8 +12,8 @@ authors:
   - Ian Carroll
 sorter:
   - intro
-  - pipelines
   - goals
+  - pipelines
   - config
   - terms
   - collab
