--- a/docs/_data/lesson.yml
+++ b/docs/_data/lesson.yml
@@ -5,6 +5,9 @@ handouts:
 tag: v0.6
 lesson: 3
 instructor: Quentin Read
+lifecycle: stable # status for lifecycle badge
+badgecolor: green # color for lifecycle badge
+warning: false # whether to include note about lifecycle status
 example:
   name: J. Doe
   user: jdoe
