--- a/docs/_data/lesson.yml
+++ b/docs/_data/lesson.yml
@@ -2,12 +2,13 @@ title: Collaborative & Reproducible Research
 handouts:
   - worksheet.R
   - worksheet.sh
-tag: v0.7
+tag: v0.8
 lesson: 3
 instructor: Quentin Read
 lifecycle: stable # status for lifecycle badge
 badgecolor: green # color for lifecycle badge
 warning: false # whether to include note about lifecycle status
+doi: 10.5281/zenodo.5705586
 example:
   name: J. Doe
   user: jdoe
